<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"></group>

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_notificationaccess"
                android:icon="@drawable/ic_launch"
                android:title="@string/nav_item_notificationaccess" />
            <item
                android:id="@+id/nav_keywordlist"
                android:icon="@drawable/ic_add_circle"
                android:title="@string/nav_item_keywordlist"/>
            <item
                android:id="@+id/nav_applist"
                android:icon="@drawable/ic_check_box"
                android:title="@string/nav_item_applist" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_item_help"/>
            <item
                android:id="@+id/nav_cleardata"
                android:icon="@drawable/ic_delete"
                android:title="@string/nav_item_delete"/>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_item_info"/>
        </menu>
    </item>

</menu>
